# Infinite-File-Curtailer

./: .gitignore  CONTRIBUTING  CONTRIBUTING.md  Makefile.am  NOTICE  README.md  configure.ac  crtl_file_io.c  crtl_main.c  crtl_private.h  makefile
src/: Makefile.am  crtl_common.c  crtl_file_io.c  crtl_lib.c  crtl_main.c  crtl_private.h  curtail.h
